# Jump

./: .gitignore  CMakeLists.txt  README.md
include/: body_controller.h  bodycontroller.h  cloud.h  controller.h  controller_general.h  game.h  game_object.h  message_queue.h  obstacle.h  player.h  renderer.h  snake.h  types.h
media/: jump.xcf  structure
src/: body_controller.cpp  bodycontroller.cpp  cloud.cpp  controller.cpp  game.cpp  game_object.cpp  main.cpp  obstacle.cpp  player.cpp  renderer.cpp
